metadata/force-app/main/default/objects/Opportunity/fields/New_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>New_Checkbox__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New Checkbox</label>
    <type>Checkbox</type>
</CustomField>