metadata/force-app/main/default/objects/Opportunity/fields/picklist_jj__c.field-meta.xml
<CustomField>
    <fullName>picklist_jj__c</fullName>
    <label>picklist jj</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__JobStatus</valueSetName>
    </valueSet>
</CustomField>