metadata/force-app/main/default/objects/Opportunity/fields/What_Bear_is_Best__c.field-meta.xml
<CustomField>
    <fullName>What_Bear_is_Best__c</fullName>
    <label>What Bear is Best?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black Bear</fullName>
            </value>
            <value>
                <fullName>That&apos;s debatable</fullName>
            </value>
            <value>
                <fullName>Beets</fullName>
            </value>
            <value>
                <fullName>Battlestar Galactica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>